--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Logo centered above -->
     <div class="text-start mb-2">
       <a class="navbar-brand" href="#page-top">
-        <img src="/logotop.png" height="35px" alt="Laneige Logo">
+        <img src="logotop.png" height="35px" alt="Laneige Logo">
       </a>
     </div>
 
@@ -57,7 +57,7 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-0">
-                    <img class="img-fluid rounded-5" src="/aboutimage.png" height="600px">
+                    <img class="img-fluid rounded-5" src="aboutimage.png" height="600px">
                 </div>
             </div>
         </header>
@@ -66,7 +66,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6">
-                        <div class="p-5"><img class="img-fluid rounded-5" src="/pic1.png" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-5" src="pic1.png" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
@@ -82,7 +82,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-5" src="/pic2.png" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-5" src="pic2.png" alt="..." /></div>
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
@@ -98,7 +98,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6">
-                        <div class="p-5"><img class="img-fluid rounded-5" src="/pic3.png" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-5" src="pic3.png" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
@@ -117,7 +117,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-5" src="/pic4.png" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-5" src="pic4.png" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
